--- a/Secuencias.html
+++ b/Secuencias.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <img src="Imagenes/LogoSolo.png" width="100">
-        <h1>Proyectos</h1>
+        <h1>Secuencias</h1>
         <p>Explora nuestras propuestas innovadoras para transformar el aprendizaje.</p>
     </header>
 
